versions/v2.9/modules/en/pages/security/cis-scans/enable-alerting-for-rancher-cis-benchmark.adoc
= Enable Alerting for {rancher-product-name} CIS Benchmark
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/cis-scan-guides/enable-alerting-for-rancher-cis-benchmark.adoc 
:product-path: security/cis-scans/enable-alerting-for-rancher-cis-benchmark.adoc

Alerts can be configured to be sent out for a scan that runs on a schedule.

[NOTE]
.Prerequisite:
====

Before enabling alerts for `rancher-cis-benchmark`, make sure to install the `rancher-monitoring` application and configure the Receivers and Routes. For more information, see xref:observability/monitoring-and-dashboards/configuration/receivers.adoc[this section.]

While configuring the routes for `rancher-cis-benchmark` alerts, you can specify the matching using the key-value pair `job: rancher-cis-scan`. An example route configuration is xref:observability/monitoring-and-dashboards/configuration/receivers.adoc#_example_route_config_for_cis_scan_alerts[here.]
====


While installing or upgrading the `rancher-cis-benchmark` Helm chart, set the following flag to `true` in the `values.yaml`:

[,yaml]
----
alerts:
  enabled: true
----
