versions/v2.11/modules/en/pages/security/cis-scans/enable-alerting-for-rancher-cis-benchmark.adoc
= Enable Alerting for {rancher-product-name} CIS Benchmark
:page-languages: [en, zh]
:revdate: 2025-03-12
:page-revdate: {revdate}
:page-community-path: how-to-guides/advanced-user-guides/cis-scan-guides/enable-alerting-for-rancher-cis-benchmark.adoc 
:page-product-path: security/cis-scans/enable-alerting-for-rancher-cis-benchmark.adoc
ifeval::["{build-type}" != "community"]
:xref-receivers: xref:observability/monitoring-and-dashboards/configuration/receivers.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-receivers: xref:reference-guides/monitoring-v2-configuration/receivers.adoc
endif::[]

Alerts can be configured to be sent out for a scan that runs on a schedule.

[NOTE]
.Prerequisite:
====

Before enabling alerts for `rancher-cis-benchmark`, make sure to install the `rancher-monitoring` application and configure the Receivers and Routes. For more information, see {xref-receivers}[this section.]

While configuring the routes for `rancher-cis-benchmark` alerts, you can specify the matching using the key-value pair `job: rancher-cis-scan`. An example route configuration is {xref-receivers}#_example_route_config_for_cis_scan_alerts[here.]
====


While installing or upgrading the `rancher-cis-benchmark` Helm chart, set the following flag to `true` in the `values.yaml`:

[,yaml]
----
alerts:
  enabled: true
----
